# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.95 2005/03/30 00:52:36 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added code to detect when the output logfile is moved and temporarily
  disabled the done/error dialogs.

  29 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
  Complete overhaul of Users.py.  UI is smart, but not yet integrated
  into the backend.

  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added install complete/error message boxes and a TextView for displaying
  output. Change /tmp/install.log back to /var/log/install.log

  26 Mar 2005; Preston Cody <codeman@gentoo.org>
  removed /usr/local/zoneinfo from gtkfe b/c it's already being added on the BE.
  
  26 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Blank entry won't get added with Update in Networking.py

  25 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  gentoo-sources is default option in Kernel.py. Changed all gtk.TRUE/FALSE
  to True/False

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added livecd-kernel option to Kernel.py.

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Reenabled 'emerge sync' option. Removed get_random_salt() function and
  replaced call to crypt.crypt() with GLIUtility.hash_password()

  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Temporarily disabled 'emerge sync' option in PortageTree due to python
  threading bug. Removed fifo code.

  16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  PartitioningMain calls deactivate() in active notebook page in its
  deactivate(). PartitioningMain's deactivate() returns a value. Subtract
  1 from end value.

  7 Mar 2005; John Laliberte <allanonl@bu.edu>
  Added a custom package bar where you can fill in custom packages to emerge
  (space seperated list)

  6 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>