@@ -1,9 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.95 2005/03/30 00:52:36 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.96 2005/03/31 01:51:06 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
-
+  30 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Users.py is now half integrated into the backend (saving only).
+  
   29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added code to detect when the output logfile is moved and temporarily
   disabled the done/error dialogs.
